--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ body {
 .main-heading {
     color: #3A3A3A;
     font-size: 29px;
-    font-weight: 400;
+    font-weight: 700;
 }
 
 .search {
@@ -35,22 +35,13 @@ body {
     height: 100%;
     width: 100%;
     padding-left: 40px;
+    background: no-repeat url(../img/ellipse.svg) left 12px center;
+    background-color: #ffffff;
 }
 
-.search-wrapper {
-    display: flex;
-    justify-content: space-around;
+.search-wrapper { 
     width: 295px;
     height: 45px;
-    position: relative;
-    z-index: 1;
-}
-
-.search-img {
-    position: absolute;
-    z-index: 15;
-    left: 12px;
-    top: 15px;
 }
 
 .main-wrapper {
@@ -58,17 +49,17 @@ body {
     margin: 0 auto;
 }
 
-.wrapper-of-wrapper-product {
+.product-item {
     display: inline-block;
     margin-top: 38px;
     position: relative;
 }
 
-.wrapper-of-wrapper-product:nth-child(2n), .wrapper-of-wrapper-product:nth-child(1) {
+.product-item:nth-child(2n), .product-item:nth-child(1) {
     margin-right: 70px;
 }
 
-.product-wrapper:hover::before {
+.img-wrapper:hover::before {
     content: "";
     display: block;
     width: 100%;
@@ -78,60 +69,48 @@ body {
     top: 0;
     left: 0;
     opacity: 55%;
-    z-index: 1;
 }
 
 .img-wrapper {
     width: 294px;
     height: 301px;
     position: relative;
+    overflow: hidden;
 }
 
 .img-wrapper img {
     width: 100%;
-    height: 100%;
 }
 
-.discount::before {
-    content: " ";
-    display: block;
+.discount-wrapper, .new-wrapper, .star-wrapper {
     width: 48px;
     height: 48px;
     position: absolute;
     border: none;
-    background-color: #E97171;
     border-radius: 50%;
     top: 24px;
     right: 24px;
-    z-index: 5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
 }
 
-.new::before {
-    content: " ";
-    display: block;
-    width: 48px;
-    height: 48px;
-    position: absolute;
-    border: none;
+.discount-wrapper {
+    background-color: #E97171;
+}
+
+.new-wrapper {
     background-color: #2EC1AC;
-    border-radius: 50%;
-    top: 24px;
-    right: 25px;
-    z-index: 5;
 }
 
-.star::before {
-    content: " ";
-    display: block;
-    width: 48px;
-    height: 48px;
-    position: absolute;
-    border: none;
-    background-color: #EAD836;
-    border-radius: 50%;
-    top: 24px;
-    right: 16px;
-    z-index: 5;
+.star-wrapper {
+    background: #EAD836 no-repeat url(../img/star.svg) center center;
+}
+
+.text-wrapper {
+    font-size: 16px;
+    color: #ffffff;
 }
 
 .info {
@@ -158,7 +137,7 @@ body {
     color: #3A3A3A;
     font-weight: 600;
     font-size: 20px;
-    margin-right: 16px;
+    margin-right: 10px;
 }
 
 .product-price-old {
@@ -171,22 +150,23 @@ body {
     margin-top: 183px;
 }
 
-.option {
-    display: inline-block;
+.footer-links {
+    display: flex;
+    justify-content: space-between;
+    width: 423px;
+}
+
+.footer-link {
     text-transform: uppercase;
-    margin-right: 25px;
     font-weight: 600;
     font-size: 18px;
     text-decoration: none;
     color: #3A3A3A;
 }
 
-.option:nth-child(4n) {
-    margin-right: none;
-}
-
 .copyrights {
     color: #3A3A3A;
+    font-weight: 600;
 }
 
 
